Removed tests in Production Code, and unnecessary gradle import